<resources>
    <string name="app_name">PublicisSapientTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="total_produits">Total Produits</string>
    <string name="offre">Offre</string>
    <string name="total">Total</string>
    <string name="valider_le_panier">Valider le panier</string>
    <string name="add_to_basket">Ajouter au panier</string>
    <string name="book_image_desc">Book image desc</string>
</resources>